--- a/index.html
+++ b/index.html
@@ -243,6 +243,39 @@ footer{padding:44px 0;text-align:center;color:var(--muted);border-top:1px solid 
   </div>
 </section>
 
+  <!-- COMPATIBLE ECOSYSTEM -->
+<section class="wrap" id="compatibility">
+  <div class="section__head">
+    <h2 class="section__title">Compatible Ecosystem</h2>
+    <span class="pill">Trusted by sim veterans</span>
+  </div>
+
+  <p class="lede">
+    The CoreFlux rig is designed for real hardware — no hacks, no wobbles.  
+    Compatible out of the box with leading flight and racing systems.
+  </p>
+
+  <div class="compat-grid">
+    <div class="compat-block">
+      <h3>Flight Controls</h3>
+      <ul>
+        <li>Virpil</li>
+        <li>VKB</li>
+        <li>Thrustmaster</li>
+      </ul>
+    </div>
+
+    <div class="compat-block">
+      <h3>Steering Wheels</h3>
+      <ul>
+        <li>Fanatec</li>
+        <li>Moza</li>
+        <li><em>Soon to include:</em> Simucube, Logitech</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
 
 <!-- PHILOSOPHY -->
 <section id="philosophy" class="wrap">
