--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ footer{padding:44px 0;text-align:center;color:var(--muted);border-top:1px solid 
 
 <section class="hero wrap">
   <div>
-    <h1>A limited range of cockpits built by gamer for gamers</h1>
+    <h1>A limited range of cockpits built by gamers for gamers</h1>
     <p>From first sketch to maiden flight. Modular, affordable, and comfortable for long sessions — clean enough for the living room.</p>
     <div style="display:flex;gap:10px;flex-wrap:wrap">
       <a href="#configurator" class="btn primary">Build yours</a>
