--- a/index.html
+++ b/index.html
@@ -165,17 +165,52 @@ footer{padding:44px 0;text-align:center;color:var(--muted);border-top:1px solid 
 </section>
 
 <section id="workswith" class="wrap">
-  <h2>Works With</h2>
-  <p class="lede">Fully compatible with leading flight and racing hardware — no drilling required.</p>
-  <div class="logo-strip" aria-label="Brands">
-    <img src="assets/images/logos/honeycomb.svg" alt="Honeycomb Aeronautical">
-    <img src="assets/images/logos/thrustmaster.svg" alt="Thrustmaster">
-    <img src="assets/images/logos/logitech.svg" alt="Logitech">
-    <img src="assets/images/logos/virpil.svg" alt="Virpil">
-    <img src="assets/images/logos/vkb.svg" alt="VKB">
-    <img src="assets/images/logos/mfg.svg" alt="MFG">
+ <!-- STORY / NARRATIVE -->
+<section id="story" class="wrap">
+  <h2>The Switch</h2>
+  <p class="lede">From deep work to full-tilt immersion — CoreFlux is the rig that moves with you, not against you.</p>
+
+  <div class="cards-grid" style="margin-top:16px">
+    <article class="card" style="padding:18px">
+      <h3>Workstation → FPS</h3>
+      <p class="lede">Sit-stand posture dialed. Keyboard clears, peripherals lock in. In under five minutes you’re sighted-in and ready to push frames.</p>
+      <p>Rigid extrusion, zero flex, cable runs that don’t snag. You focus on the shot — the rig disappears.</p>
+    </article>
+
+    <article class="card" style="padding:18px">
+      <h3>FPS → Racing</h3>
+      <p class="lede">Wheel on, pedals aligned, seat rails snap to your mark. No drilling, no shims, no wobble.</p>
+      <p>Angles and reach lock with repeatable stops. Muscle memory holds — lap after lap.</p>
+    </article>
+
+    <article class="card" style="padding:18px">
+      <h3>Racing → Flight</h3>
+      <p class="lede">Yoke or HOTAS? Center-stick or dual-stick? Mounts change without tearing the desk apart.</p>
+      <p>Throttle, trim, and cams sit exactly where they should. You’re airborne in minutes, not hours.</p>
+    </article>
+  </div>
+
+  <div class="cards-grid" style="margin-top:16px">
+    <article class="card" style="padding:18px">
+      <h3>Living-Room Ready</h3>
+      <p class="lede">Looks like furniture, performs like a tool. Clean lines, hidden fasteners, routed cables.</p>
+      <p>No scaffolding vibes — just purpose.</p>
+    </article>
+
+    <article class="card" style="padding:18px">
+      <h3>Engineered, Not Assembled</h3>
+      <p class="lede">4080 aluminium, stainless fasteners, tight tolerances. Everything measured, nothing assumed.</p>
+      <p>Replace, upgrade, or re-configure without buying a new frame.</p>
+    </article>
+
+    <article class="card" style="padding:18px">
+      <h3>Repeatable By Design</h3>
+      <p class="lede">Index marks, fixed geometry, and quick-plates mean your setup returns to exact positions every time.</p>
+      <p>Less wrenching. More driving. More flying.</p>
+    </article>
   </div>
 </section>
+
 
 <!-- CONFIGURATOR -->
 <section id="configurator" class="wrap">
