--- a/index.html
+++ b/index.html
@@ -164,6 +164,41 @@ footer{padding:44px 0;text-align:center;color:var(--muted);border-top:1px solid 
   </div>
 </section>
 
+  <!-- PROLOGUE / NARRATIVE -->
+<section id="prologue" class="wrap">
+  <h2>Built for Workdays, Wired for Play</h2>
+  <p class="lede">
+    I needed one place to do it all. Head-down productivity at 09:00, a quick FPS session at lunch,
+    racing after hours, and a full flight at night — without rebuilding a room or wrecking my posture.
+    CoreFlux is that one-stop rig: fast to re-configure, comfortable all day, and clean enough for the living room.
+  </p>
+
+  <div class="cards-grid" style="margin-top:16px">
+    <article class="card" style="padding:18px">
+      <h3>Focus without friction</h3>
+      <p class="lede">Work like it’s a dedicated workstation.</p>
+      <p>Keyboard, mouse, mic, and camera live where they should. Cable runs stay tidy. Nothing rattles, nothing wobbles — so deep work stays deep.</p>
+    </article>
+
+    <article class="card" style="padding:18px">
+      <h3>Flow, not setup</h3>
+      <p class="lede">Mode-switching takes minutes, not hours.</p>
+      <p>Quick-plates and indexed geometry lock controls into repeatable positions. Swap from keyboard to wheel, from yoke to HOTAS, without re-measuring every time.</p>
+    </article>
+
+    <article class="card" style="padding:18px">
+      <h3>Comfort that lasts</h3>
+      <p class="lede">All-day ergonomics, all-night sessions.</p>
+      <p>Seat rails, reach, and angles dial in precisely. The frame absorbs load; your body doesn’t. Stay fresh for spreadsheets and stints alike.</p>
+    </article>
+  </div>
+
+  <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:14px">
+    <a href="#configurator" class="btn primary">Configure My Build</a>
+    <a href="#story" class="btn ghost">See How the Switch Works</a>
+  </div>
+</section>
+
 <section id="workswith" class="wrap">
  <!-- STORY / NARRATIVE -->
 <section id="story" class="wrap">
