--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@ img{max-width:100%;display:block}
 
 /* SECTIONS */
 section{position:relative;z-index:1}
-#workswith,#configurator,#accessories,#philosophy,#specs,#compat,#testimonials,#faq,#cta{padding:70px 0}
-.logo-strip{display:flex;justify-content:center;flex-wrap:wrap;gap:40px;padding:18px 0}
-.logo-strip img{height:50px;opacity:.75;transition:.25s}
-.logo-strip img:hover{opacity:1;transform:scale(1.08)}
+#prologue,#story,#configurator,#accessories,#philosophy,#specs,#compat,#testimonials,#faq,#cta{padding:70px 0}
 .cards-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:22px}
 .card{background:rgba(255,255,255,.03);border:1px solid var(--border);border-radius:14px;overflow:hidden;transition:.3s}
 .card:hover{transform:translateY(-4px)}
@@ -121,8 +118,10 @@ footer{padding:44px 0;text-align:center;color:var(--muted);border-top:1px solid 
       </div>
     </div>
 
+    <!-- NAV LINKS -->
     <div class="links">
-      <a href="#workswith">Works With</a>
+      <a href="#prologue">About</a>
+      <a href="#story">The Switch</a>
       <a href="#configurator">Build</a>
       <a href="#accessories">Accessories</a>
       <a href="#philosophy">Why</a>
@@ -164,7 +163,7 @@ footer{padding:44px 0;text-align:center;color:var(--muted);border-top:1px solid 
   </div>
 </section>
 
-  <!-- PROLOGUE / NARRATIVE -->
+<!-- PROLOGUE / NARRATIVE -->
 <section id="prologue" class="wrap">
   <h2>Built for Workdays, Wired for Play</h2>
   <p class="lede">
@@ -199,8 +198,7 @@ footer{padding:44px 0;text-align:center;color:var(--muted);border-top:1px solid 
   </div>
 </section>
 
-<section id="workswith" class="wrap">
- <!-- STORY / NARRATIVE -->
+<!-- STORY / NARRATIVE -->
 <section id="story" class="wrap">
   <h2>The Switch</h2>
   <p class="lede">From deep work to full-tilt immersion — CoreFlux is the rig that moves with you, not against you.</p>
@@ -245,7 +243,6 @@ footer{padding:44px 0;text-align:center;color:var(--muted);border-top:1px solid 
     </article>
   </div>
 </section>
-
 
 <!-- CONFIGURATOR -->
 <section id="configurator" class="wrap">
